--- a/index.html
+++ b/index.html
@@ -59,22 +59,24 @@
         <h2>My Work</h2>
         <div class="portfolio-gallery">
             <div class="portfolio-item">
-                <img src="static/image3.jpg" alt="Windows in The City">
-                <h4>Windows in The City</h4>
-                <p>Branding project that captures the essence of urban landscapes.</p>
+                <img src="static/image3.jpg" alt="PJ 1">
+                <h4>Development of a system for collecting volleyball statistics using AI technologies</h4>
+                <p>Automation of statistics for amateur volleyball</p>
+		<iframe width="100%" height="200" src="https://www.youtube.com/embed/DuFdvS8PGWY" frameborder="0" allowfullscreen></iframe>
                 <a href="https://ai-hunter.ru/rudn" target="_blank" class="btn">Project Link</a>
             </div>
             <div class="portfolio-item">
-                <img src="static/image1.jpg" alt="Building Blocks">
+                <img src="static/image1.jpg" alt="PJ 2">
                 <h4>Building Blocks</h4>
                 <p>Frontend design for a modular and scalable web application interface.</p>
                 <a href="hhttps://ai-hunter.ru/rudn" target="_blank" class="btn">Project Link</a>
             </div>
             <div class="portfolio-item">
-                <img src="static/image2.jpg" alt="Shout and Jump">
-                <h4>Shout & Jump</h4>
-                <p>Creative branding project that uses bold visuals to make a statement.</p>
-                <a href="https://ai-hunter.ru/rudn" target="_blank" class="btn">Project Link</a>
+                <img src="static/image2.jpg" alt="PJ 3">
+                <h4>Creation of a prototype of an AI system for facial recognition.</h4>
+                <p>For REVISOR terminals (OOO UniTech).</p>
+		<iframe width="100%" height="200" src="https://www.youtube.com/embed/s846NHvICL8" frameborder="0" allowfullscreen></iframe>
+                <a href="https://lab.neural-university.ru/facial-features" target="_blank" class="btn">Project Link</a>
             </div>
             <div class="portfolio-item">
                 <h3>RUDN Project</h3>
