--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="intro-section">
         <img src="static/myfoto.png" style="width: 280px; height: 350px; display: block; margin: 0 auto;">
         <p class="p3"> *** </p>
-        <p class="p2">Welcome to the Alexei Efremov AI Projects website!</p>
+        <p class="p2">Welcome! to the Alexei Efremov AI Projects website!</p>
         <p class="p2">This site, created as an educational project using FastAPI, serves as a demonstration panel for simple artificial intelligence projects.</p>
         <p class="p2">I invite you to explore AI projects and conduct interesting experiments with them!</p>
         <p class="p2">If you have any questions or suggestions, feel free to contact me at ajefrenov@gmail.com or via Telegram: @Lex_Je</p>
